--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.ear
 .directory
@@ -13,8 +12,11 @@ miktex
 old
 out
 resources/google/*
-build/Config
+build/*
+!build/*.jar
 
+lib
+src/META-INF
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
